--- a/src/widgets/school-menu/ui/school-menu/school-menu.module.scss
+++ b/src/widgets/school-menu/ui/school-menu/school-menu.module.scss
@@ -22,7 +22,6 @@
 
   .school-list {
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
     gap: $gap-l $gap-xl;
     list-style-type: none;
 
